--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,11 @@
       padding: 0;
 }
 
+body {
+      background: radial-gradient(ellipse at top, #140efb, #0a0a0a 55%);
+      min-height: 100vh !important;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
